--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         }
     },
     "scripts": {
+        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
         "analyse": "vendor/bin/phpstan analyse",
         "format": "vendor/bin/pint"
     },
